# draft

./: .gitignore  CartpoleModeling.jl  cartpole_control.py  cartpole_modeling.py  cartpole_pid.py  legacy.py  main.py  main2.py  point_stabilization.py  pyproject.toml  pyrightconfig.json  race_car.py  trajectory_tracking.py
cartpole/: cartpole_full_state_fb.py  cartpole_modeling.py  cartpole_mpc.py  cartpole_pid.py
cartpole/lib/: models.py
wheeled_vehicle/: point_stabilization.py
