[tool.poetry]
name = "mpc"
version = "0.1.0"
description = ""
authors = ["Alvaro Gaona <alvgaona@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
casadi = "^3.6.5"
matplotlib = "^3.9.0"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
